--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.8",
     "clsx": "^2.1.1",
-    "next": "15.1.8",
+    "next": "^15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.176.0"
